--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "setup-a-professional-project-backend",
   "version": "1.0.0",
   "description": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
